# ngmpy

./: .gitignore  .gitmodules  LICENSE.md  README.md  pyproject.toml
src/: CMakeLists.txt  ngm_to_ngmpy.cpp
